# apple-sys

./: .cspell.json  .gitignore  Bindgen.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build_features.inc.rs  configure.py
.github/workflows/: rust.yml
bindgen/: Bindgen.toml  Cargo.toml
bindgen/src/: builder.rs  config.rs  lib.rs  main.rs  sdk.rs  test.rs
crates/apple-bindgen/: .gitignore  Bindgen.toml  Cargo.toml  build.rs  deps.toml
crates/apple-bindgen/src/: builder.rs  config.rs  lib.rs  main.rs  objc2.rs  test.rs
crates/apple-sys/: .gitignore  Cargo.toml  build.rs  configure.py  ios.inc.rs  macos.inc.rs
crates/apple-sys-prebuilt-iphoneos/: Cargo.toml
crates/apple-sys-prebuilt-iphoneos/src/: lib.rs
crates/apple-sys-prebuilt-macosx/: Cargo.toml  build.rs
crates/apple-sys-prebuilt-macosx/src/: lib.rs
crates/apple-sys/examples/: accelerate_vimage.rs  accessibility_api.rs  accounts_store.rs  addressbook_people.rs  adservices_attribution.rs  adsupport_identifier.rs  appkit_window.rs  applescriptkit_plugin.rs  applicationservices_ats.rs  apptracking_status.rs  assessment_config.rs  audiotoolbox_components.rs  authservices_session.rs  automator_actions.rs  avb_interface.rs  avfaudio_engine.rs  avfoundation_devices.rs  avkit_player.rs  avrouting_controller.rs  backgroundassets_download.rs  backgroundtasks_scheduler.rs  businesschat_action.rs  calendarstore_events.rs  callkit_directory.rs  carbon_gestalt.rs  cfnetwork_proxy.rs  cinematic_asset.rs  classkit_context.rs  cloudkit_container.rs  collaboration_identity.rs  colorsync_profiles.rs  common.rs  compositorservices_check.rs  contacts_count.rs  contactsui_picker.rs  coreaudio_devices.rs  coreaudiokit_views.rs  corebluetooth_state.rs  corefoundation_plist.rs  coregraphics_pdf.rs  (+149 more)
crates/apple-sys/src/: lib.rs
crates/apple-sys/tests/: test_frameworks.rs  test_sub_frameworks.rs
scripts/: check-key-symbols.sh  check-symbol-duplicates.sh  regenerate-prebuilt.sh
src/: lib.rs
sys/: Cargo.toml  build.rs  build_features.inc.rs  configure.py  ios.inc.rs  macos.inc.rs  tvos.inc.rs  watchos.inc.rs
sys/src/: gen.rs  lib.rs  test.rs
