[package]
name = "apple-bindgen"
version = "0.1.3"
edition = "2021"
description = "bindgen helper for Apple frameworks"
keywords = ["sys", "apple", "macos", "bindgen"]
categories = ["api-bindings", "os::macos-apis"]
authors = ["Jeong YunWon <jeong@youknowone.org>"]
repository = "https://github.com/youknowone/apple-sys/"
readme = "../README.md"
license = "BSD-2-Clause"
include = ["*.toml", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.60.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "1.0.140"
toml = "0.5.9"
derive_more = { version = "0.99.17" }
apple-sdk = "0.1.0"
thiserror = "1.0.31"

clap = { version = "3.2.14", features = ["derive"], optional = true }

[features]
default = ["bin"]  # required-featues for apple-bindgen binary
bin = ["clap"]

[[bin]]
name = "apple-bindgen"    
required-features = ["bin"] 
