[package]
name = "apple-bindgen"
version = "0.1.3"
edition = "2021"
description = "bindgen helper for Apple frameworks"
keywords = ["sys", "apple", "macos", "bindgen"]
categories = ["api-bindings", "os::macos-apis"]
authors = ["Jeong YunWon <jeong@youknowone.org>"]
repository = "https://github.com/youknowone/apple-sys/"
readme = "../README.md"
license = "BSD-2-Clause"
include = ["*.toml", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.63"
serde = { version = "1.0", features = ["derive"] }
toml = "0.6"
derive_more = { version = "0.99" }
apple-sdk = "0.4"
thiserror = "1.0"
regex = "1.7"

clap = { version = "4.1", features = ["derive"], optional = true }

[features]
default = ["bin"]  # required-featues for apple-bindgen binary
bin = ["clap"]

[[bin]]
name = "apple-bindgen"    
required-features = ["bin"] 
